# tuneit

./: CMakeLists.txt  CMakeLists.txt.bak  CMakeLists.txt.user.01c8d7a  FrequencyPlotView.qml  README.md  SettingsDialog.qml  appsettings.cpp  appsettings.h  assets.qrc  audiobufferrecorder.cpp  audiobufferrecorder.h  audiobufferrecorder_oboe.cpp  audiobufferrecorder_oboe.h  audiobufferrecorder_rtaudio.cpp  audiobufferrecorder_rtaudio.h  build-windows-msvc19.txt  build-windows-msvc19.txt.bak  building-docker-container-ubuntu18.04  complexbuffermodel.cpp  complexbuffermodel.h  cppcheck.xml  fftfilterprocessor.cpp  fftfilterprocessor.h  fftw-sources.cmake  main.cpp  main.qml  music_notes.h  oboe.cmake  qml.qrc  updateworker.mjs
android/: AndroidManifest.xml
android/src/com/bgcottrell/tuneit/: AudioDevices.java
build-TuneIt-Qt-FFTW3-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake  rtaudio.lib
build-TuneIt-Qt-FFTW3-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/.cmake/api/v1/reply/: cache-v2-31df0b514da90c9375d1.json  cmakeFiles-v1-eda5a345f99fed278506.json  codemodel-v2-8cf87b669e622d148b26.json  directory-.-Debug-f5e96b2ce1ba1f204953.json  index-2022-10-17T23-09-34-0412.json  target-TuneIt-Debug-dd0edfda1cd732ea428a.json  target-TuneIt_autogen-Debug-4ce73bb7997b28355604.json  target-TuneIt_autogen_timestamp_deps-Debug-e7f343151ce695aa2416.json  target-rtaudio-Debug-d3849ae30d0370e8ace1.json  target-rtaudio_autogen-Debug-0c28be515d981c7924d4.json  target-rtaudio_autogen_timestamp_deps-Debug-6cd8433ec0528b209419.json
build-TuneIt-Qt-FFTW3-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-TuneIt-Qt-FFTW3-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/.qtc_clangd/.cache/clangd/index/: AudioSessionTypes.h.13536529D440D02E.idx  Audioclient.h.5723ED94A8230EF9.idx  Mferror.h.F0E75F76B1BFEA6D.idx  QThread.87E5ED8366488426.idx  QVariantList.876040AC7DC2F02F.idx  RtAudio.cpp.984310288DC28CF9.idx  RtAudio.h.E3E0A2ABBC5A231A.idx  StructuredQueryCondition.h.56BF09A01F794909.idx  array.4633C8654156FCF9.idx  audiobufferrecorder_rtaudio.cpp.7EA8F3A9F3CB7BE7.idx  audiobufferrecorder_rtaudio.h.C03219BFFF90D228.idx  avrt.h.15EB8DF56FF89C7F.idx  commdlg.h.AC39C67085DA238E.idx  corecrt.h.E4425A3B9B7A38F0.idx  ctime.3C33CE5634F371E7.idx  ddraw.h.2918BD3580BD4405.idx  dxgiformat.h.E8BE1CAA7CA4591E.idx  evr.h.585ED0693590BB01.idx  exception.9683067DBF70B6BA.idx  fftfilterprocessor.cpp.6E784E298D2B0DFE.idx  fftfilterprocessor.h.4FA5CC91B6F8794B.idx  fftw3.h.2DE407D0B1270666.idx  functiondiscoverykeys_devpkey.h.39E43E15063A5518.idx  ios.61FA4B1FE2554FE3.idx  iosfwd.A78F55AE63F2C5FA.idx  istream.49CBA35B35B7E7A0.idx  ks.h.857ADC4B032FF5E2.idx  ksmedia.h.EB8F26DE069852A5.idx  main.cpp.DBA808615AC399B4.idx  mediaobj.h.6171147D3E158AF8.idx  mfapi.h.7D348134D9088201.idx  mfidl.h.F290362AC0DD27E6.idx  mfobjects.h.4A414660295E771E.idx  mfplay.h.AA9BA8D129470D9C.idx  mftransform.h.D90F152BAEE533DB.idx  minwindef.h.F56FA3A76B86BF08.idx  mmdeviceapi.h.1C53C3F404CB3E59.idx  mmeapi.h.152C29B2867BD8CB.idx  mmreg.h.8DCBE3086A238FF1.idx  objidl.h.460605A3729BB025.idx  (+82 more)
build-TuneIt-Qt-FFTW3-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/TuneIt_autogen/: deps
build-TuneIt-Qt-FFTW3-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/TuneIt_autogen/EWIEGA46WW/: moc_audiobufferrecorder_rtaudio.cpp.d  moc_fftfilterprocessor.cpp.d
build-TuneIt-Qt-FFTW3-Desktop_Qt_6_2_4_MSVC2019_64bit-Debug/rtaudio_autogen/: deps
fftw3config/: config.h
test1/: 0.html  index.html  stats.html
